# CleanLedger

./: .gitignore  PRODUCTION_REQUIREMENTS_V1_1.md  PROJE_DOSYASI.md  README.md  THERMAL_PRINT_REPORT.md  information.md  package-lock.json  package.json  roadmap.md
.cursor/rules/: no-cursor-attribution.mdc  no-cursor-branding.mdc
.githooks/: prepare-commit-msg
.github/workflows/: build.yml
apps/desktop/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/scripts/: seed-products.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  print.rs
apps/desktop/src-tauri/windows/: hooks.nsh  installer.nsi  main.wxs
apps/web/: README.md  index.html  index.template.html  package-lock.json  package.json  vite.config.ts
apps/web/api/: auth.php  config.local.php.example  config.php  sync.php
apps/web/assets/: index-ADN9ZktQ.js  index-B3_2NE1m.js  index-BKfLuBji.css  index-Bcyk73Lo.js  index-BlI_iwJm.css  index-BrVvXMtH.js  index-BtK-Z-tS.js  index-BzyHsN8n.js  index-C-AyqS-S.js  index-CKVPkTqD.css  index-Cha9QdS1.css  index-Cz_idEzk.css  index-D4o_4Wwo.js  index-D89exLDd.css  index-DIRo9niP.js  (+9 more)
assets/: index-55C6mOvF.css  index-CY6-BiTN.js
docs/: SYNC_PROTOCOL.md
scripts/: build-windows.sh  install-git-hooks.ps1
scripts/git-hooks/: prepare-commit-msg
(+189 files in other folders)
