[package]
name = "cleanledger-desktop"
version = "1.0.10"
description = "CleanLedger — Kuru Temizleme Yönetim Sistemi"
authors = ["Cicibyte Corp."]
edition = "2021"

[lib]
name = "cleanledger_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
